--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="arsenal-logo">
             <img src="arsenal-logo.png" alt="Arsenal Logo">
         </div>
-        <h1>Arsenal Football Club</h1>
+        <h1>ARSEnal Football Club</h1>
         <div class="cl-drought">
             <h2>Time Without Champions League Glory</h2>
             <p class="subtitle">Still Waiting Since 1886...</p>
